fix: use String Utils instead of instance method for isBlank check for connection submission date
NO_TICKET: